prevent the type monogram from being squished

--- a/packages/completer/style/base.css
+++ b/packages/completer/style/base.css
@@ -73,6 +73,7 @@
   background: transparent;
   color: white;
   width: var(--jp-private-completer-item-height);
+  min-width: var(--jp-private-completer-item-height);
   font-family: var(--jp-ui-font-family);
   font-size: var(--jp-ui-font-size1);
   line-height: calc(
